整理java8新特性

--- a/编程工具的使用.md
+++ b/编程工具的使用.md
@@ -361,24 +361,19 @@ https://blog.csdn.net/qq_33442844/article/details/80506041?utm_medium=distribute
 
 ### 小技巧
 
-推送拒绝
-1、可以打开项目所在目录，使用gui强制推送
 
-2、在idea中，可以在终端中输入强制推送命令
 
-      git push -f
+#### 看不懂弹窗
 
-￼
-
-添加远程仓库
-￼
-
-看不懂弹窗
 有时候弹窗英文无法看懂也不能复制可以点击“？”在网页中用自动翻译查看
 
-idea的使用
-idea详细使用
+
+
+#### idea详细使用
+
 https://blog.csdn.net/qq_31655965/article/details/52788374?spm=100
+
+
 
 #### 推送拒绝
 
@@ -394,11 +389,32 @@ https://blog.csdn.net/qq_31655965/article/details/52788374?spm=100
 
 ### 添加远程仓库
 
+#### 自己写的分支，添加仓库
+
 ![image-20210310194522947](编程工具的使用.assets/image-20210310194522947.png)
 
-#### 看不懂弹窗
 
-有时候弹窗英文无法看懂也不能复制可以==点击“？”在网页中用自动翻译查看==
+
+#### 使用Git GUI方式克隆远程代码的方法
+
+1.打开指定文件夹、鼠标右键，点击“Git GUI Here”
+
+2.选择“Clone Existing Repository”
+
+![img](编程工具的使用.assets/20160504145637426)
+
+3.Copy输入远程git地址https://github.com/tianma3798/Common.git，及本地文件名称
+
+![img](编程工具的使用.assets/20160504145653256)
+
+
+
+
+
+
+
+
+
 
 ## idea的使用
 
